# asciinema-automation

./: .envrc.sh  .gitignore  LICENSE  README.md  default.nix  flake.nix  package.toml  pyproject.toml
asciinema_automation/: cli.py  script.py
docs/: README.md  README.template.md
examples/: asciinema_automation_hello_world.sh  asciinema_hello_world.sh  autocompletion.sh
examples/demos/: asciinema_automation_hello_world.cast  asciinema_hello_world.cast  autocompletion.cast  backward_search.cast  change_structure.cast  escaped_command.cast  hello_world.cast  history.cast  man_page.cast  special_character.cast  temp_test.cast
shell/: default.nix
