[tool.setuptools.packages.find]
include = ["asciinema_automation"]
namespaces = false

[project]
name = "asciinema-automation"
version = "0.2.0"
authors = [{ name = "Pierre Marchand", email = "test@test.com" }]
description = "Automate `asciinema` recordings."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Unix",
]
keywords = ["asciinema"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "mypy", "types-pexpect"]

[project.urls]
"Homepage" = "https://github.com/Nate-Wilkins/asciinema-automation"
"Bug Tracker" = "https://github.com/Nate-Wilkins/asciinema-automation/issues"

[project.scripts]
asciinema-automation = "asciinema_automation.cli:cli"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.12"
strict = true

